2008-06-16  Maciej Piechotka <uzytkownik2@gmail.com>

	* gui/caltypes.xml:
	* gui/memotypes.xml:
	* gui/tasktypes.xml:
	Usage _title instead of title to allow translations.

2008-06-10  Matthew Barnes  <mbarnes@redhat.com>

	* common/authentication.c:
	* gui/calendar-component.c:
	* gui/comp-editor-factory.c:
	* gui/dialogs/copy-source-dialog.c:
	* gui/dialogs/select-source-dialog.c:
	* gui/memos-component.c:
	* gui/migration.c:
	* gui/tasks-component.c:
	Use <glib/gi18n.h> instead of <bonobo/bonobo-i18n.h>.

2008-06-09  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #536813

	* gui/comp-util.h: (is_icalcomp_on_the_server):
	* gui/comp-util.c: (is_icalcomp_on_the_server): Similar helper function
	as cal_comp_is_on_server only the parameter is icalcomponent.
	* gui/e-week-view-event-item.c: (e_week_view_event_item_double_click):
	* gui/e-week-view.c: (e_week_view_on_text_item_event):
	Do not start to edit the event on the double click if the event is not
	on the server yet. Storing the event can cause the renumbering events
	so the result can be that the edited event would be different.

2008-06-04  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes security vulnerabilities
	   CVE-2008-1108 and CVE-2008-1109

	* gui/itip-utils.c (html_new_lines_for):
	Do not use a fixed-size buffer for parsing external data.
	Simplify the logic to just split and rejoin the string with a
	different line separator.

	* gui/e-itip-control.c (write_label_piece), (write_recurrence_piece),
	(set_date_label):
	Use a GString rather than a fixed-size buffer to build the HTML
	string to avoid the possibility of an overflow.

2008-06-04  Shuai Liu <shuai.liu@sun.com>

	** Fix for bug #535204

	* gui/tasks-component.c: (destroy_component_view):
	The tasks objects had been destroyed before the call of destroy_
        component in tasks-component.c. No need to call them.

2008-05-29  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #535459

	* gui/itip-utils.h: (is_icalcomp_valid):